--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "pre-commit": "pnpm lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.37.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "iconsax-react": "^0.0.8",
@@ -20,9 +21,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-select": "^5.8.3",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.4",
-    "@tanstack/react-query": "^5.37.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
