--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.4",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
