--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "winston-slack-webhook-transport": "^2.3.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-mongo": "^3.1.6",
