--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,14 @@
     "pre-commit": "pnpm lint"
   },
   "dependencies": {
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@tanstack/react-query": "^5.37.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.17",
     "iconsax-react": "^0.0.8",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
