--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@tanstack/react-query-devtools": "4",
     "@types/node": "^20",
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
