--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -5,7 +5,12 @@
     "plugin:@tanstack/eslint-plugin-query/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
     "no-unused-vars": 1,
     // "@typescript-eslint/no-unused-vars": "warn",
