--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.4",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.7.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -45,6 +45,7 @@
     "eslint-config-next": "14.2.7",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-typescript": "^0.14.0",
     "husky": "^9.0.11",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
