--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "autoprefixer": "^10.4.19",
+    "cypress": "^13.16.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "eslint-config-prettier": "^9.1.0",
